{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 661,
  "lineage": "55cff45b-1d4e-2cc0-5d96-7ac4601f3060",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e755a862e9895c6",
            "domain": "vpc",
            "id": "eipalloc-03e755a862e9895c6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-231-38-128.compute-1.amazonaws.com",
            "public_ip": "34.231.38.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "web eip"
            },
            "tags_all": {
              "Name": "web eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9107ed11be76fde",
            "arn": "arn:aws:ec2:us-east-1:440661626547:instance/i-0c856dbbedbc43b0b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c856dbbedbc43b0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f6f51cc9e9d2810",
            "private_dns": "ip-10-0-1-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07209f55cc3b09ef3",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0439377a49726e957",
            "tags": {
              "Name": "web_node"
            },
            "tags_all": {
              "Name": "web_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b00d173fbe408f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.web_auth",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc",
            "data.aws_ami.server_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9107ed11be76fde",
            "arn": "arn:aws:ec2:us-east-1:440661626547:instance/i-013c2dda4d1ccbb56",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013c2dda4d1ccbb56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a5120da1f893421",
            "private_dns": "ip-10-0-2-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0666dfaf7236e58f6",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebe328dd69054d3b",
            "tags": {
              "Name": "web_node"
            },
            "tags_all": {
              "Name": "web_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b00d173fbe408f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.web_auth",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc",
            "data.aws_ami.server_ami"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9107ed11be76fde",
            "arn": "arn:aws:ec2:us-east-1:440661626547:instance/i-0600d57611f21436f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0600d57611f21436f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033597ab83c326f59",
            "private_dns": "ip-10-0-3-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0109af9ffd0a4e768",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2b9b2fb02fdb4fa",
            "tags": {
              "Name": "web_node"
            },
            "tags_all": {
              "Name": "web_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b00d173fbe408f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.web_auth",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:internet-gateway/igw-083ba314e3ceb2711",
            "id": "igw-083ba314e3ceb2711",
            "owner_id": "440661626547",
            "tags": {
              "Name": "web_igw"
            },
            "tags_all": {
              "Name": "web_igw"
            },
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:loadbalancer/app/web-alb/e377f26552c8c690",
            "arn_suffix": "app/web-alb/e377f26552c8c690",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-1114723730.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:440661626547:loadbalancer/app/web-alb/e377f26552c8c690",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06b00d173fbe408f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00eeec2e8632f2689"
              },
              {
                "subnet_id": "subnet-056c8123d2bbdf9c2"
              },
              {
                "subnet_id": "subnet-05c295a8a99963824"
              }
            ],
            "subnets": [
              "subnet-00eeec2e8632f2689",
              "subnet-056c8123d2bbdf9c2",
              "subnet-05c295a8a99963824"
            ],
            "vpc_id": "vpc-0a6c97d9c59ab988d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-public",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:listener/app/web-alb/e377f26552c8c690/38e891fc95508a43",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:440661626547:listener/app/web-alb/e377f26552c8c690/38e891fc95508a43",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:loadbalancer/app/web-alb/e377f26552c8c690",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "web-listener"
            },
            "tags_all": {
              "Name": "web-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web-alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-public",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661",
            "arn_suffix": "targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg20240130194952873600000001",
            "name_prefix": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web_tg"
            },
            "tags_all": {
              "Name": "web_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661-20240130195033681900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661",
            "target_id": "i-0c856dbbedbc43b0b"
          },
          "dependencies": [
            "aws_instance.web_node",
            "aws_key_pair.web_auth",
            "aws_lb_target_group.web_tg",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc",
            "data.aws_ami.server_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661-20240130195034051700000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661",
            "target_id": "i-013c2dda4d1ccbb56"
          },
          "dependencies": [
            "aws_instance.web_node",
            "aws_key_pair.web_auth",
            "aws_lb_target_group.web_tg",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc",
            "data.aws_ami.server_ami"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661-20240130195034380600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:440661626547:targetgroup/my-tg20240130194952873600000001/f1a5d385eaa60661",
            "target_id": "i-0600d57611f21436f"
          },
          "dependencies": [
            "aws_instance.web_node",
            "aws_key_pair.web_auth",
            "aws_lb_target_group.web_tg",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e755a862e9895c6",
            "association_id": "eipassoc-00ca5da02862d4d0e",
            "connectivity_type": "public",
            "id": "nat-0ba1a7a7efec1540d",
            "network_interface_id": "eni-0506d61a77e494c6d",
            "private_ip": "10.0.4.224",
            "public_ip": "34.231.38.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00eeec2e8632f2689",
            "tags": {
              "Name": "web NAT"
            },
            "tags_all": {
              "Name": "web NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.web_igw",
            "aws_subnet.web_subnet-public",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-083ba314e3ceb2711",
            "id": "r-rtb-0e08e298f7aeea0a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e08e298f7aeea0a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.web_rt",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03813c6c8377721251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ba1a7a7efec1540d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03813c6c837772125",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.web_igw",
            "aws_nat_gateway.web_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.web_subnet-public",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:route-table/rtb-03813c6c837772125",
            "id": "rtb-03813c6c837772125",
            "owner_id": "440661626547",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:route-table/rtb-0e08e298f7aeea0a6",
            "id": "rtb-0e08e298f7aeea0a6",
            "owner_id": "440661626547",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web_rt"
            },
            "tags_all": {
              "Name": "web_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7dfcd0da1b48e0",
            "route_table_id": "rtb-03813c6c837772125",
            "subnet_id": "subnet-0439377a49726e957"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0957972f9bb7ebff8",
            "route_table_id": "rtb-03813c6c837772125",
            "subnet_id": "subnet-0ebe328dd69054d3b"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08701e25e70fa375d",
            "route_table_id": "rtb-03813c6c837772125",
            "subnet_id": "subnet-0e2b9b2fb02fdb4fa"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.web_subnet-private",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094eb05e2e5635f17",
            "route_table_id": "rtb-0e08e298f7aeea0a6",
            "subnet_id": "subnet-00eeec2e8632f2689"
          },
          "dependencies": [
            "aws_route_table.web_rt",
            "aws_subnet.web_subnet-public",
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091e0decbaf57312b",
            "route_table_id": "rtb-0e08e298f7aeea0a6",
            "subnet_id": "subnet-05c295a8a99963824"
          },
          "dependencies": [
            "aws_route_table.web_rt",
            "aws_subnet.web_subnet-public",
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d04c39c01373069",
            "route_table_id": "rtb-0e08e298f7aeea0a6",
            "subnet_id": "subnet-056c8123d2bbdf9c2"
          },
          "dependencies": [
            "aws_route_table.web_rt",
            "aws_subnet.web_subnet-public",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:security-group/sg-06b00d173fbe408f8",
            "description": "security group for develpment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b00d173fbe408f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "49.43.7.34/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "440661626547",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:subnet/subnet-0439377a49726e957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0439377a49726e957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440661626547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet-private"
            },
            "tags_all": {
              "Name": "web_subnet-private"
            },
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:subnet/subnet-0ebe328dd69054d3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe328dd69054d3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440661626547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet-private"
            },
            "tags_all": {
              "Name": "web_subnet-private"
            },
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:subnet/subnet-0e2b9b2fb02fdb4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2b9b2fb02fdb4fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440661626547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet-private"
            },
            "tags_all": {
              "Name": "web_subnet-private"
            },
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:subnet/subnet-00eeec2e8632f2689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eeec2e8632f2689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440661626547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet-public"
            },
            "tags_all": {
              "Name": "web_subnet-public"
            },
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:subnet/subnet-05c295a8a99963824",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c295a8a99963824",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440661626547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet-public"
            },
            "tags_all": {
              "Name": "web_subnet-public"
            },
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:subnet/subnet-056c8123d2bbdf9c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056c8123d2bbdf9c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440661626547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet-public"
            },
            "tags_all": {
              "Name": "web_subnet-public"
            },
            "vpc_id": "vpc-0a6c97d9c59ab988d"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440661626547:vpc/vpc-0a6c97d9c59ab988d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3918743b77e2cd4",
            "default_route_table_id": "rtb-0171bf182942dbe42",
            "default_security_group_id": "sg-0f0006f6f8ccc7382",
            "dhcp_options_id": "dopt-0bf14d578d078408e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6c97d9c59ab988d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0171bf182942dbe42",
            "owner_id": "440661626547",
            "tags": {
              "Name": "web_vpc"
            },
            "tags_all": {
              "Name": "web_vpc"
            }
          }
        }
      ]
    }
  ]
}